--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -49,7 +49,7 @@
                         <!-- <ng-template> -->
                             <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
                             style="padding:0px !important"> 
-                            <kt-upload-packets [viewpacketsDetails]="customerDetail" [ornamentType]="ornamentType"></kt-upload-packets>
+                            <kt-upload-packets [viewpacketsDetails]="customerDetail" [ornamentType]="customerDetail"></kt-upload-packets>
                         </div>
                         <!-- </ng-template> -->                        
                     </mat-tab>
