--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.scss
@@ -9,6 +9,22 @@
         min-width: 130px !important;
         padding: 0 !important;
     }
+
+    ::ng-deep.mat-tab-label .mat-tab-label-content {
+        flex-wrap: wrap!important;
+      }
+    //   ::ng-deep.mat-tab-label{
+    //     // justify-content: left !important;
+    //     padding-left: 0px !important;
+ 
+    // }
+      
+      ::ng-deep.mat-tab-label .mat-tab-label-content span{
+        display: flex!important;
+        flex: 1 0 100%!important;  
+        justify-content: left !important;
+
+      }
    
     // select{
     //     -webkit-appearance: none !important;
