--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/assign-packets/assign-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/assign-packets/assign-packets.component.html
@@ -24,8 +24,8 @@
                             <label class="kt-padding-l-10 mandatory">Branch</label>
                         </div>
                         <div class="col-8">
-                            <select class="form-control" formControlName="internalBranchId"
-                                [class.isError]="controls.internalBranchId.touched && controls.internalBranchId.invalid">
+                            <select class="form-control" formControlName="internalUserBranch"
+                                [class.isError]="controls.internalUserBranch.touched && controls.internalUserBranch.invalid">
                                 <option value="" [disabled]="true" [selected]="true"> Select Branch
                                 </option>
                                 <option *ngFor="let branch of branches" [value]="branch.id">
@@ -33,7 +33,7 @@
                                 </option>
                             </select>
                             <mat-error
-                                *ngIf="controls.internalBranchId.touched && controls.internalBranchId.errors?.required">
+                                *ngIf="controls.internalUserBranch.touched && controls.internalUserBranch.errors?.required">
                                 Required field
                             </mat-error>
                         </div>
@@ -46,7 +46,8 @@
     <kt-portlet-footer>
         <div class="p-3">
             <kt-modal-footer *ngIf="data.action == 'add'" (action)="action($event)" [value]="'Add'"></kt-modal-footer>
-            <kt-modal-footer *ngIf="data.action == 'edit'" (action)="action($event)" [value]="'Edit'"></kt-modal-footer>
+            <kt-modal-footer *ngIf="data.action == 'edit'" (action)="action($event)" [value]="'Update'">
+            </kt-modal-footer>
         </div>
     </kt-portlet-footer>
 </kt-portlet>
