--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
@@ -12,8 +12,8 @@
                 <ng-container matColumnDef="internalBranch">
                     <mat-header-cell *matHeaderCellDef>Branch</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.customer">
-                            <!-- {{role.customer.customerUniqueId}} -->
+                        <span *ngIf="role.internalBranch">
+                            {{role.internalBranch.name | titlecase}}
                         </span>
                     </mat-cell>
                 </ng-container>
@@ -38,7 +38,7 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <div [ngStyle]="{'display': 'inherit'}">
+                        <div [ngStyle]="{'display': 'inherit'}" *ngIf="!role.packetAssigned">
                             <span class="kt-pointer" (click)="editPacket(role)"
                                 *ngxPermissionsOnly="['packetEdit']">Edit</span>
                             <div class="px-2" *ngxPermissionsOnly="['packetDelete'] || ['packetEdit']">|</div>
