--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -47,31 +47,13 @@
                                 <label [class.mandatory]="viewOnly" class="">Full Name</label>
                             </div>
                             <div class="col-7">
-                                <!-- <div class="row"> -->
-                                <!-- <div class="col"> -->
                                 <input type="text" class="form-control" placeholder="Full Name"
                                     formControlName="firstName"
                                     value="{{this.data.customerKycReview.firstName | titlecase}} &nbsp;&nbsp;{{this.data.customerKycReview.lastName | titlecase}}"
                                     readonly />
-
-                                <!-- </div> -->
-                                <!-- <div class="col">
-                                        <input type="text" class="form-control" placeholder="Full Name"
-                                            formControlName="lastName" />
-    
-                                    </div> -->
-                                <!-- </div> -->
-                                <!-- <mat-error
-                                *ngIf="controls.alternateMobileNumber.errors?.required && controls.alternateMobileNumber.touched">
-                                Required field
-                            </mat-error> -->
-
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="row kt-margin-t-20">
                     <div class="col-6">
                         <div class="row">
                             <div class="offset-1 col-3 form-label">
@@ -84,26 +66,29 @@
                                             formControlName="mobileNumber"
                                             value="{{ this.data.customerKycReview.mobileNumber | titlecase }}"
                                             readonly />
-                                        <!-- <mat-error
-                                                *ngIf="controls.alternateMobileNumber.errors?.required && controls.alternateMobileNumber.touched">
-                                                Required field
-                                            </mat-error> -->
                                     </div>
                                     <div class="col pl-0" *ngIf="viewOnly">
                                         <button class="w-100 btn success-button" color="success">Verified</button>
                                     </div>
                                 </div>
                             </div>
+                            <!-- </div> -->
+                            <!-- </div> -->
                         </div>
                     </div>
+                </div>
+
+                <div class="row kt-margin-t-20">
+
 
                     <div class="col-6">
                         <div class="row">
                             <div class="offset-1 col-3 form-label">
-                                <label [class.mandatory]="viewOnly" class="">PAN</label>
+                                <label [class.mandatory]="viewOnly"
+                                    class="">{{data.customerKycReview.panType | uppercase}}</label>
                             </div>
                             <div class="col-7">
-                                <div class="row">
+                                <div class="row" *ngIf="data.customerKycReview.panType == 'pan'">
                                     <div class="col-8">
                                         <input type="text" class="form-control" placeholder="PAN"
                                             formControlName="panCardNumber"
@@ -115,6 +100,16 @@
                                         <button class="w-100 btn success-button" color="success">Verified</button>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+
+                        <div class="col offset-4 kt-margin-t-25">
+                            <div class="img-container ">
+                                <ng-container>
+                                    <img class="fetched-image" [src]="data.customerKycReview.panImage"
+                                        style="border-radius: 15px;" alt=""
+                                        (click)="previewImage(data.customerKycReview.panImage)" />
+                                </ng-container>
                             </div>
                         </div>
                     </div>
