--- a/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.scss
@@ -39,6 +39,9 @@
         margin       : 10px;
         border-radius: 15px;
     }
+    .grid-card {
+        width: 20%;
+    }
     .list-card {
         position     : relative;
         width        : 100%;
@@ -46,6 +49,18 @@
         margin       : 10px;
         border-radius: 15px;
         border: 1px solid #ebedf2;
+    }
+    .productListImage {
+        max-width: 100px;
+        max-height: 100px;
+    }
+    .productGridImageDiv {
+        min-width: 150px;
+        min-height: 150px;
+    }
+    .productGridImage {
+        max-width: 150px;
+        max-height: 150px;
     }
     mat-paginator.mat-paginator.paginator--centered {
         display: flex;
